[package]
name = "deduper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crc32fast = "1.3.2"
clap = { version = "3.1.18", features = ["derive"] }
log = "0.4"
pretty_env_logger = "0.4"
indicatif = "0.16.2"